apply suggestions from code review

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -253,6 +253,6 @@ By adding this snippet to the `head` of your website, you can hint the browser t
 [11]: api#container
 [12]: api
 [13]: required-configuration#introduce-global-information-as-meta-tags
-[14]: helpers.docsearch#with-custom-variables
+[14]: record-extractor#with-custom-variables
 [16]: https://www.algolia.com/doc/guides/managing-results/refine-results/filtering/#facetfilters
 [15]: https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/
