--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -199,7 +199,7 @@ You can then [transform these attributes as `facetFilters`][3] to [filter over t
 Any questions? [Send us an email][9].
 
 [1]: integrations
-[2]: helpers.docsearch#recordProps-api-reference
+[2]: record-extractor#recordProps-api-reference
 [3]: https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/
 [5]: https://html.spec.whatwg.org/dev/common-microsyntaxes.html#comma-separated-tokens
 [6]: https://semver.org/
@@ -208,5 +208,5 @@ Any questions? [Send us an email][9].
 [9]: mailto:DocSearch@algolia.com
 [10]: DocSearch-v3#filtering-your-search
 [11]: templates
-[12]: helpers.docsearch#complex-extractors
+[12]: record-extractor#complex-extractors
 [13]: integrations
