Apply suggestions from code review
Co-authored-by: Samuel Bodin <samuel.bodin@algolia.com>
Co-authored-by: François Chalifour <francoischalifour@users.noreply.github.com>

--- a/packages/website/docs/how-does-it-work.mdx
+++ b/packages/website/docs/how-does-it-work.mdx
@@ -17,9 +17,9 @@ The first thing you'll need to do is to apply for DocSearch by [filling out the 
 
 We guarantee that we will answer every request, but as we receive a lot of applications, please give us a couple of days to get back to you :)
 
-## We create the Crawler and your Algolia application
+## We create your Algolia application and a dedicated crawler
 
-Once we receive [your application][1], we'll have a look at your website and create a custom [Algolia Crawler][5] and an Algolia application for it. The Crawler comes [a configuration file][6] which defines which URLs we should crawl or ignore, as well as the specific CSS selectors to use for selecting headers, subheaders, etc.
+Once we receive [your application][1], we'll have a look at your website, create an Algolia application and a dedicated [crawler][5] for it. Your crawler comes with [a configuration file][6] which defines which URLs we should crawl or ignore, as well as the specific CSS selectors to use for selecting headers, subheaders, etc.
 
 This step still requires some manual work and human brain, but thanks to the +4 000 configs we already created, we're able to automate most of it. Once this creation finishes, we'll run a first indexing of your website and have it run automatically at a random time of the week.
 
