--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -14,7 +14,7 @@ If your website is generated, thanks to one of [our supported tool][1], you do n
 
 You can find the default DocSearch config template below and tweak it with some examples from our [`complex extractors` section][12].
 
-If you are using one of [our integrations][13], please see [the templates page][11]
+If you are using one of [our integrations][13], please see [the templates page][11].
 
 <details><summary>docsearch-default.js</summary>
 <p>
