--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -17,7 +17,7 @@ You can find the default DocSearch config template below and tweak it with some 
 If you are using one of [our integrations][13], please see [the templates page][11].
 
 <details><summary>docsearch-default.js</summary>
-<p>
+<div>
 
 
 ```js
@@ -130,7 +130,7 @@ new Crawler({
 });
 ```
 
-</p>
+</div>
 </details>
 
 
