Apply suggestions from code review
Co-authored-by: HonkingGoose <34918129+HonkingGoose@users.noreply.github.com>

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -21,7 +21,7 @@ This version has been rewritten in React, and now exposes React components. The 
 
 With the recent release of the stable version of [Algolia Autocomplete][1], and the huge adoption of DocSearch v3, we will start working on a stable release!
 
-Thanks to all the Alpha testers, and to [all the integrations][5] who already supports it!
+Thanks to all the Alpha testers, and to [all the integrations][5] who already support it!
 
 ## Installation
 
