--- a/packages/website/docs/how-does-it-work.mdx
+++ b/packages/website/docs/how-does-it-work.mdx
@@ -21,16 +21,16 @@ We guarantee that we will answer every request, but as we receive a lot of appli
 
 Once we receive [your application][1], we'll have a look at your website, create an Algolia application and a dedicated [crawler][5] for it. Your crawler comes with [a configuration file][6] which defines which URLs we should crawl or ignore, as well as the specific CSS selectors to use for selecting headers, subheaders, etc.
 
-This step still requires some manual work and human brain, but thanks to the +4 000 configs we already created, we're able to automate most of it. Once this creation finishes, we'll run a first indexing of your website and have it run automatically at a random time of the week.
+This step still requires some manual work and human brain, but thanks to the +4,000 configs we already created, we're able to automate most of it. Once this creation finishes, we'll run a first indexing of your website and have it run automatically at a random time of the week.
 
 **With the Crawler, comes [a dedicated interface][8] for you to:**
 
 - Start, schedule and monitor your crawls
 - Edit and test your config file directly with [DocSearch v3][7]
 
-**With the Algolia application, comes an access to the dashboard for you to:**
+**With the Algolia application comes access to the dashboard for you to:**
 
-- Browse your index and see how is your content indexed
+- Browse your index and see how your content is indexed
 - Various analytics to understand how your search performs and ensure that your users are able to find what they’re searching for
 - Trials for other Algolia features
 - Team management
