--- a/packages/website/versioned_docs/version-legacy/how-do-we-build-an-index.mdx
+++ b/packages/website/versioned_docs/version-legacy/how-do-we-build-an-index.mdx
@@ -47,7 +47,7 @@ We index the temporary record when we add an element to it (if `min_indexed_leve
   alt="5th step"
 />
 
-Base on the position within the flow, we nest elements as much as possible to keep the context and incerease the relevancy.
+Based on the position within the flow, we nest elements as much as possible to keep the context and increase the relevancy.
 
 ## We iterate until we match a `text` element
 
