--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -10,7 +10,7 @@ To help you create the best search experience for your users, we provide config 
 
 Templates are available when you [create a new Crawler](https://crawler.algolia.com/admin/crawlers/create). They will automatically be filled with your website URL, Algolia credentials and index name.
 
-<div style={{ textAlign: 'center' }}>
+<div className="uil-ta-center">
   <img
     src={useBaseUrl('img/assets/new-crawler-creation.png')}
     alt="Algolia Crawler creation page"
