--- a/packages/website/docs/manage-your-crawls.mdx
+++ b/packages/website/docs/manage-your-crawls.mdx
@@ -10,7 +10,7 @@ DocSearch comes with the [Algolia Crawler web interface](https://crawler.algolia
 
 Head over to the `Overview` section to `start`, `restart` or `pause` your crawls and view a real-time summary.
 
-<div style={{ textAlign: 'center' }}>
+<div className="uil-ta-center">
   <img
     src={useBaseUrl('img/assets/crawler-overview.png')}
     alt="Algolia Crawler creation page"
@@ -21,7 +21,7 @@ Head over to the `Overview` section to `start`, `restart` or `pause` your crawls
 
 The `monitoring` section helps you find crawl errors or improve your search results.
 
-<div style={{ textAlign: 'center' }}>
+<div className="uil-ta-center">
   <img
     src={useBaseUrl('img/assets/crawler-monitoring.png')}
     alt="Algolia Crawler creation page"
@@ -32,7 +32,7 @@ The `monitoring` section helps you find crawl errors or improve your search resu
 
 The live editor allows you to update your config file and test your URLs (`URL tester`).
 
-<div style={{ textAlign: 'center' }}>
+<div className="uil-ta-center">
   <img
     src={useBaseUrl('img/assets/crawler-editor.png')}
     alt="Algolia Crawler creation page"
@@ -43,7 +43,7 @@ The live editor allows you to update your config file and test your URLs (`URL t
 
 From the [`editor`](#update-your-config), you have access to a `Search preview` tab to browse search results with [`DocSearch v3`](/docs/docsearch-v3).
 
-<div style={{ textAlign: 'center' }}>
+<div className="uil-ta-center">
   <img
     src={useBaseUrl('img/assets/crawler-search-preview.png')}
     alt="Algolia Crawler creation page"
