fix(website): apply feedbacks from beta testers

--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -2,6 +2,12 @@
 title: Config templates
 ---
 
+:::info
+
+The following content is for **[the new DocSearch infrastructure](/docs/migrating-from-legacy)**. If you haven't received an email to migrate your account yet, please refer to the **[legacy](/docs/legacy/dropdown)** documentation.
+
+:::
+
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
 To help you create the best search experience for your users, we provide config templates for multiple websites generators. If you'd like to add a new template to our list, or believe we should update an existing one, please [send us an email][1] or [open a pull request][2]
