docs(website): Fix invalid links to legacy docs
Legacy docs are accessible at /docs/legacy/ however some pages link
to them relative to current page eg legacy/ leading to broken links
(404s when accessed).

Fix updates links to URLs relative to document root.

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -243,7 +243,7 @@ By adding this snippet to the `head` of your website, you can hint the browser t
 [1]: https://www.algolia.com/doc/ui-libraries/autocomplete/introduction/what-is-autocomplete/
 [2]: https://github.com/algolia/docsearch/
 [3]: https://github.com/algolia/docsearch/tree/master
-[4]: legacy/dropdown
+[4]: /docs/legacy/dropdown
 [5]: integrations
 [6]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors
 [7]: https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement
