--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -215,7 +215,7 @@ Learn more on the [Navigator API][11] documentation.
 [1]: https://www.algolia.com/doc/ui-libraries/autocomplete/introduction/what-is-autocomplete/
 [2]: https://github.com/algolia/docsearch/
 [3]: https://github.com/algolia/docsearch/tree/master
-[4]: legacy/dropdown
+[4]: /docs/legacy/dropdown
 [5]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors
 [6]: https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement
 [7]: https://www.algolia.com/doc/api-reference/search-api-parameters/
