--- a/packages/website/docs/migrating-from-legacy.mdx
+++ b/packages/website/docs/migrating-from-legacy.mdx
@@ -118,9 +118,9 @@ Your [legacy config][11] will be parsed to a [Crawler config][12], please use [t
 
 Your credentials will remain available, but **once all the existing configs have been migrated, we will stop the daily crawl jobs**.
 
-### Why do I see two Algolia app in my dashboard?
+### Why do I see two Algolia apps in my dashboard?
 
-We did not remove access to the legacy DocSearch application (`BH4D9OD16A`) to give you the time to get familiar with our new infra. `BH4D9OD16A` will remain available until the migration has been completed for all the DocSearch users.
+We did not remove access to the legacy DocSearch application (`BH4D9OD16A`) to give you the time to get familiar with our new infrastructure. `BH4D9OD16A` will remain available until the migration has been completed for all the DocSearch users.
 
 _Please only refer to your new Algolia application if you already have access_
 
