fix(examples): use new infra credentials

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -157,8 +157,8 @@ If you're eager to test DocSearch v3 and can't wait to receive your credentails,
 
 ```js
 docsearch({
-  appId: 'BH4D9OD16A',
-  apiKey: '25626fae796133dc1e734c6bcaaeac3c',
+  appId: 'R2IYF7ETH7',
+  apiKey: '599cec31baffa4868cae4e79f180729b',
   indexName: 'docsearch',
 });
 ```
@@ -171,8 +171,8 @@ docsearch({
 
 ```jsx
 <DocSearch
-  appId="BH4D9OD16A"
-  apiKey="25626fae796133dc1e734c6bcaaeac3c"
+  appId="R2IYF7ETH7"
+  apiKey="599cec31baffa4868cae4e79f180729b"
   indexName="docsearch"
 />
 ```
