feat(v3): allow overriding default toggle key

--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -169,6 +169,11 @@ const translations: DocSearchTranslations = {
 
 </div>
 </details>
+## `toggleKey`
+
+> `type: string` | `default: "k"` | **optional**
+
+Allow overriding the default key to open/close the DocSearch modal.
 
 </TabItem>
 
@@ -308,6 +313,12 @@ const translations: DocSearchTranslations = {
 
 </div>
 </details>
+
+## `toggleKey`
+
+> `type: string` | `default: "k"` | **optional**
+
+Allow overriding the default key to open/close the DocSearch modal.
 
 </TabItem>
 
