add default implementation of the `DocSearchTranslations`

--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -123,7 +123,52 @@ Learn more on the [Navigator API][11] documentation.
 
 Allow translations of any raw text present in the DocSearch button or modal components.
 
-See the [default implementation](https://github.com/algolia/docsearch/blob/next/packages/docsearch-react/src/DocSearch.tsx#L20-L23)
+<details><summary>docSearchTranslations</summary>
+<div>
+
+```ts
+const translations: DocSearchTranslations = {
+  button: {
+    buttonText: 'Search',
+    buttonAriaLabel: 'Search',
+  },
+  modal: {
+    searchBox: {
+      resetButtonTitle: 'Clear the query',
+      resetButtonAriaLabel: 'Clear the query',
+      cancelButtonText: 'Cancel',
+      cancelButtonAriaLabel: 'Cancel',
+    },
+    startScreen: {
+      recentSearchesTitle: 'Recent',
+      noRecentSearchesText: 'No recent searches',
+      saveRecentSearchButtonTitle: 'Save this search',
+      removeRecentSearchButtonTitle: 'Remove this search from history',
+      favoriteSearchesTitle: 'Favorite',
+      removeFavoriteSearchButtonTitle: 'Remove this search from favorites',
+    },
+    errorScreen: {
+      titleText: 'Unable to fetch results',
+      helpText: 'You might want to check your network connection.',
+    },
+    footer: {
+      selectText: 'to select',
+      navigateText: 'to navigate',
+      closeText: 'to close',
+      searchByText: 'Search by',
+    },
+    noResultsScreen: {
+      noResultsText: 'No results for',
+      suggestedQueryText: 'Try searching for',
+      openIssueText: 'Believe this query should return results?',
+      openIssueLinkText: 'Let us know',
+    },
+  },
+};
+```
+
+</div>
+</details>
 
 </TabItem>
 
@@ -217,7 +262,52 @@ Learn more on the [Navigator API][11] documentation.
 
 Allow translations of any raw text present in the DocSearch button or modal components.
 
-See the [default implementation](https://github.com/algolia/docsearch/blob/next/packages/docsearch-react/src/DocSearch.tsx#L20-L23)
+<details><summary>docSearchTranslations</summary>
+<div>
+
+```ts
+const translations: DocSearchTranslations = {
+  button: {
+    buttonText: 'Search',
+    buttonAriaLabel: 'Search',
+  },
+  modal: {
+    searchBox: {
+      resetButtonTitle: 'Clear the query',
+      resetButtonAriaLabel: 'Clear the query',
+      cancelButtonText: 'Cancel',
+      cancelButtonAriaLabel: 'Cancel',
+    },
+    startScreen: {
+      recentSearchesTitle: 'Recent',
+      noRecentSearchesText: 'No recent searches',
+      saveRecentSearchButtonTitle: 'Save this search',
+      removeRecentSearchButtonTitle: 'Remove this search from history',
+      favoriteSearchesTitle: 'Favorite',
+      removeFavoriteSearchButtonTitle: 'Remove this search from favorites',
+    },
+    errorScreen: {
+      titleText: 'Unable to fetch results',
+      helpText: 'You might want to check your network connection.',
+    },
+    footer: {
+      selectText: 'to select',
+      navigateText: 'to navigate',
+      closeText: 'to close',
+      searchByText: 'Search by',
+    },
+    noResultsScreen: {
+      noResultsText: 'No results for',
+      suggestedQueryText: 'Try searching for',
+      openIssueText: 'Believe this query should return results?',
+      openIssueLinkText: 'Let us know',
+    },
+  },
+};
+```
+
+</div>
+</details>
 
 </TabItem>
 
