--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -28,7 +28,6 @@ Templates are available when you [create a new Crawler](https://crawler.algolia.
 <details><summary>docusaurus-v1.js</summary>
 <div>
 
-
 ```js
 new Crawler({
   appId: 'YOUR_APP_ID',
@@ -177,12 +176,10 @@ new Crawler({
 </div>
 </details>
 
-
 ## Docusaurus v2 template
 
 <details><summary>docusaurus-v2.js</summary>
 <div>
-
 
 ```js
 new Crawler({
@@ -198,14 +195,19 @@ new Crawler({
       indexName: 'YOUR_INDEX_NAME',
       pathsToMatch: ['https://YOUR_WEBSITE_URL/**'],
       recordExtractor: ({ $, helpers }) => {
+        // priority order: deepest active sub list header -> navbar active item -> 'Documentation'
+        const lvl0 =
+          $(
+            '.menu__link.menu__link--sublist.menu__link--active, .navbar__item.navbar__link--active'
+          )
+            .last()
+            .text() || 'Documentation';
+
         return helpers.docsearch({
           recordProps: {
             lvl0: {
-              selectors: [
-                '.menu__link.menu__link--sublist.menu__link--active',
-                '.navbar__item.navbar__link--active',
-              ],
-              defaultValue: 'Documentation',
+              selectors: '',
+              defaultValue: lvl0,
             },
             lvl1: 'header h1',
             lvl2: 'article h2',
@@ -306,12 +308,10 @@ new Crawler({
 </div>
 </details>
 
-
 ## Vuepress v1 template
 
 <details><summary>vuepress-v1.js</summary>
 <div>
-
 
 ```js
 new Crawler({
@@ -417,12 +417,10 @@ new Crawler({
 </div>
 </details>
 
-
 ## Vuepress v2 template
 
 <details><summary>vuepress-v2.js</summary>
 <div>
-
 
 ```js
 new Crawler({
@@ -528,12 +526,10 @@ new Crawler({
 </div>
 </details>
 
-
 ## Vitepress template
 
 <details><summary>vitepress.js</summary>
 <div>
-
 
 ```js
 new Crawler({
@@ -638,12 +634,10 @@ new Crawler({
 </div>
 </details>
 
-
 ## pkgdown template
 
 <details><summary>pkgdown.js</summary>
 <div>
-
 
 ```js
 new Crawler({
@@ -819,7 +813,6 @@ new Crawler({
 
 </div>
 </details>
-
 
 [1]: mailto:docsearch@algolia.com
 [2]: https://github.com/algolia/docsearch
