--- a/packages/website/docs/migrating-from-legacy.mdx
+++ b/packages/website/docs/migrating-from-legacy.mdx
@@ -133,6 +133,17 @@ At the time you are reading this, the migration hasn't been completed, so yes th
 - The [`docsearch-scraper`][8] will be archived and not maintained in favor of our [Algolia Crawler][2], you'll still be able to use our [run your own][3] solution if you want!
 - The [`docsearch-configs`][9] repository will be archived and and host **all** of [the existing and active **legacy** DocSearch config file][11], and [their parsed version][12]. You can get a preview [on this branch][10].
 
+### I just applied, can I join the new infra?
+
+We are still at an early stage of the migration, so our focus is on live configuration first.
+
+We plan to also include new indices (< 30 days activity) to the migration batch during December 2021.
+
+## Useful links
+
+- [Docusaurus blog post](https://docusaurus.io/blog/2021/11/21/algolia-docsearch-migration)
+- [Algolia Dev chat 11-23-2021](https://www.youtube.com/watch?v=htsjpojpKtc&t=2404s)
+
 [1]: DocSearch-v3
 [2]: https://www.algolia.com/products/search-and-discovery/crawler/
 [3]: /docs/legacy/run-your-own
