docs(links): fix relative path

--- a/packages/website/docs/DocSearch-v3.mdx
+++ b/packages/website/docs/DocSearch-v3.mdx
@@ -251,15 +251,15 @@ By adding this snippet to the `head` of your website, you can hint the browser t
 [2]: https://github.com/algolia/docsearch/
 [3]: https://github.com/algolia/docsearch/tree/master
 [4]: /docs/legacy/dropdown
-[5]: integrations
+[5]: /docs/integrations
 [6]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors
 [7]: https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement
 [8]: https://codesandbox.io/s/docsearch-js-v3-playground-z9oxj
 [9]: https://codesandbox.io/s/docsearch-react-v3-playground-619yg
 [10]: https://www.npmjs.com/
-[11]: api#container
-[12]: api
-[13]: required-configuration#introduce-global-information-as-meta-tags
-[14]: record-extractor#with-custom-variables
+[11]: /docs/api#container
+[12]: /docs/api
+[13]: /docs/required-configuration#introduce-global-information-as-meta-tags
+[14]: /docs/record-extractor#with-custom-variables
 [16]: https://www.algolia.com/doc/guides/managing-results/refine-results/filtering/#facetfilters
 [15]: https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/
