--- a/packages/website/docs/migrating-from-legacy.mdx
+++ b/packages/website/docs/migrating-from-legacy.mdx
@@ -144,10 +144,10 @@ We plan to also include new indices (< 30 days activity) to the migration batch 
 - [Docusaurus blog post](https://docusaurus.io/blog/2021/11/21/algolia-docsearch-migration)
 - [Algolia Dev chat 11-23-2021](https://www.youtube.com/watch?v=htsjpojpKtc&t=2404s)
 
-[1]: DocSearch-v3
+[1]: /docs/DocSearch-v3
 [2]: https://www.algolia.com/products/search-and-discovery/crawler/
 [3]: /docs/legacy/run-your-own
-[4]: record-extractor
+[4]: /docs/record-extractor
 [7]: https://crawler.algolia.com/
 [8]: https://github.com/algolia/docsearch-scraper
 [9]: https://github.com/algolia/docsearch-configs
@@ -167,6 +167,6 @@ We plan to also include new indices (< 30 days activity) to the migration batch 
 [26]: https://www.algolia.com/doc/tools/crawler/apis/configuration/initial-index-settings/
 [27]: https://github.com/micromatch/micromatch
 [28]: https://www.algolia.com/doc/tools/crawler/apis/configuration/actions/#parameter-param-recordextractor
-[29]: record-extractor
-[30]: record-extractor#with-custom-variables
-[31]: record-extractor#pagerank
+[29]: /docs/record-extractor
+[30]: /docs/record-extractor#with-custom-variables
+[31]: /docs/record-extractor#pagerank
