--- a/packages/website/docs/required-configuration.mdx
+++ b/packages/website/docs/required-configuration.mdx
@@ -19,7 +19,6 @@ If you are using one of [our integrations][13], please see [the templates page][
 <details><summary>docsearch-default.js</summary>
 <div>
 
-
 ```js
 new Crawler({
   appId: 'YOUR_APP_ID',
@@ -129,7 +128,6 @@ new Crawler({
 </div>
 </details>
 
-
 ### Overview of a clear layout
 
 A website implementing these good practises will look simple and crystal clear. It can have this following aspect:
@@ -194,7 +192,7 @@ You can then [transform these attributes as `facetFilters`][3] to [filter over t
 
 Any questions? [Send us an email][9].
 
-[1]: integrations
+[1]: /docs/integrations
 [2]: record-extractor#recordProps-api-reference
 [3]: https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/
 [5]: https://html.spec.whatwg.org/dev/common-microsyntaxes.html#comma-separated-tokens
@@ -202,7 +200,7 @@ Any questions? [Send us an email][9].
 [7]: https://www.sitemaps.org/
 [8]: https://www.algolia.com/doc/tools/crawler/apis/configuration/render-java-script/
 [9]: mailto:DocSearch@algolia.com
-[10]: DocSearch-v3#filtering-your-search
-[11]: templates
-[12]: record-extractor#complex-extractors
-[13]: integrations
+[10]: /docs/DocSearch-v3#filtering-your-search
+[11]: /docs/templates
+[12]: /docs/record-extractor#complex-extractors
+[13]: /docs/integrations
