--- a/packages/website/versioned_docs/version-legacy/styling.mdx
+++ b/packages/website/versioned_docs/version-legacy/styling.mdx
@@ -90,5 +90,5 @@ Whether you would like to do more heavy styling, feel free to have a look at the
 You can generate your own CSS file by cloning the repository and running `yarn run build:css`. It generates the resulting file in `./dist/cdn`, and you should use them instead of the default one.
 
 [1]: https://www.algolia.com/pricing
-[2]: scraper-overview.md
+[2]: /docs/legacy/scraper-overview
 [3]: https://github.com/algolia/docsearch/tree/master/src/styles
