--- a/packages/website/docs/how-does-it-work.mdx
+++ b/packages/website/docs/how-does-it-work.mdx
@@ -41,11 +41,11 @@ We'll then get back to you with the JavaScript snippet you'll need to add to you
 
 Now that DocSearch is set, you don't have anything else to do. We'll keep crawling your website and update your search results automatically. All we ask is that you keep the "Search by Algolia" logo next to your search results.
 
-[1]: apply
-[2]: who-can-apply
+[1]: /apply
+[2]: /docs/who-can-apply
 [3]: https://github.com/algolia/docsearch-configs/tree/master/configs
-[4]: styling
+[4]: /docs/styling
 [5]: https://www.algolia.com/products/search-and-discovery/crawler/
 [6]: https://www.algolia.com/doc/tools/crawler/apis/configuration/
-[7]: DocSearch-v3
+[7]: /docs/DocSearch-v3
 [8]: https://crawler.algolia.com/
