--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -4,6 +4,7 @@ title: API Reference
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import useBaseUrl from '@docusaurus/useBaseUrl';
 
 :::info
 
@@ -160,8 +161,8 @@ const translations: DocSearchTranslations = {
     noResultsScreen: {
       noResultsText: 'No results for',
       suggestedQueryText: 'Try searching for',
-      openIssueText: 'Believe this query should return results?',
-      openIssueLinkText: 'Let us know',
+      reportMissingResultsText: 'Believe this query should return results?',
+      reportMissingResultsLinkText: 'Let us know.',
     },
   },
 };
@@ -169,6 +170,21 @@ const translations: DocSearchTranslations = {
 
 </div>
 </details>
+
+## `reportMissingResultsUrl`
+
+> `type: string` | **optional**
+
+URL of your documentation repository.
+
+When provided, an informative message wrapped with your link will be displayed on no results searches. The default text can be changed using the [translations](#translations) property.
+
+<div className="uil-ta-center">
+  <img
+    src={useBaseUrl('img/assets/noResultsScreen.png')}
+    alt="No results screen with informative message"
+  />
+</div>
 
 </TabItem>
 
@@ -299,8 +315,8 @@ const translations: DocSearchTranslations = {
     noResultsScreen: {
       noResultsText: 'No results for',
       suggestedQueryText: 'Try searching for',
-      openIssueText: 'Believe this query should return results?',
-      openIssueLinkText: 'Let us know',
+      reportMissingResultsText: 'Believe this query should return results?',
+      reportMissingResultsLinkText: 'Let us know.',
     },
   },
 };
@@ -308,6 +324,21 @@ const translations: DocSearchTranslations = {
 
 </div>
 </details>
+
+## `reportMissingResultsUrl`
+
+> `type: string` | **optional**
+
+URL of your documentation repository.
+
+When provided, an informative message wrapped with your link will be displayed on no results searches. The default text can be changed using the [translations](#translations) property.
+
+<div className="uil-ta-center">
+  <img
+    src={useBaseUrl('img/assets/noResultsScreen.png')}
+    alt="No results screen with informative message"
+  />
+</div>
 
 </TabItem>
 
