apply changes from suggestion

--- a/packages/website/docs/api.mdx
+++ b/packages/website/docs/api.mdx
@@ -171,9 +171,9 @@ const translations: DocSearchTranslations = {
 </div>
 </details>
 
-## `reportMissingResultsUrl`
+## `getMissingResultsUrl`
 
-> `type: ({ query:string }) => string` | **optional**
+> `type: ({ query: string }) => string` | **optional**
 
 > example: ({ query }) => `https://github.com/algolia/docsearch/issues/new?title=${query}`
 
@@ -327,9 +327,9 @@ const translations: DocSearchTranslations = {
 </div>
 </details>
 
-## `reportMissingResultsUrl`
+## `getMissingResultsUrl`
 
-> `type: ({ query:string }) => string` | **optional**
+> `type: ({ query: string }) => string` | **optional**
 
 > example: ({ query }) => `https://github.com/algolia/docsearch/issues/new?title=${query}`
 
